--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ transition: opacity .3s ease-in-out;
   align-items: center;
   justify-content: center;
   z-index: 1;
+  width: 100%;
 }
 
 .action-btn {
