--- a/css/style.css
+++ b/css/style.css
@@ -1,210 +1,43 @@
-.js body { display: none; }
-
-.container-fluid {
-  height: 100vh;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-}
+/* .js body {
+  display: none;
+} */
 
 
-.qrcode {
-  position: sticky;
-
-  width: 100px;
-
-
-}
-
-h3,
-h4 {
-  font-size: 2rem;
-}
 
 body {
   background-image: url(../files/background-img.jpg);
   background-attachment: fixed;
   background-position: center;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
-/* image slider */
-
-.item-info {
-  color: white;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.carousel {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.carousel-item {
-  height: 75vh;
-}
-
-.carousel-item img {
-  min-height: 65vh;
-  box-shadow: 0px 0px 20px 15px rgba(255, 255, 255, 0.05);
-}
-
-p {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-  color: white;
-  text-align: center;
-  font-size: 24px;
-
-}
-
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-  width: 2vw;
-  height: 2vw;
-  opacity: .3;
-  transition: all .3s ease-in-out;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-  background-color: transparent;
-  transition: all .1s ease-in-out;
-  font-size: 50px;
-}
-
-
-
-.carousel-control-prev:hover,
-.carousel-control-next:hover {
-  background-color: rgba(255, 255, 255, 0.21);
-  cursor: pointer;
-}
-
-.carousel-control-prev:hover .carousel-control-prev-icon,
-.carousel-control-next:hover .carousel-control-next-icon {
-  opacity: .8;
-}
-
-.carousel-item {
-  transition: transform 1.5s ease-in-out;
-}
-
-
-
-
-/* music player */
-.content-container {
-  box-sizing: border-box;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.music-player {
-  opacity: .7;
-  transition: opacity .3s ease-in-out;
-  width: 18%;
-  background-color: #fff;
-  border-radius: 15px;
-  background-color: #FFFFFF;
-  display: flex;
-  padding: 8px 20px;
-  position: relative;
-  margin-top: 110px;
-  z-index: 10;
-}
-
-.music-player:hover {
-  opacity: 1;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  width: 100%;
-
-}
-
-.action-btn {
-  background-color: #fff;
-  border: 0;
-  color: black;
-  opacity: .3;
-  transition: opacity .3s ease-in-out;
-  font-size: 35px;
-  cursor: pointer;
-  padding: 10px;
-  margin: 0 20px;
-
-}
-
-
-
-.action-btn:focus {
-  outline: 0;
-}
-
-.action-btn:hover {
-  opacity: 1;
-}
-
-.music-info {
-  background-color: #FFFFFF;
-  border-radius: 15px 15px 0 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 12px;
-  opacity: 1;
-  transform: translateY(0%);
-  z-index: 0;
-  transform: translateY(-70%);
-}
-
-.music-info h4 {
-  margin: 0;
-}
-
-.progress-container {
-  background: #fff;
-  border: black solid 1px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 10px 0 30px 0;
-  height: 10px;
+/* footer content */
+.footer-content {
+  margin-top: 1.3em;
   width: 100%;
 }
 
-.progress {
-  background-color: #e5e5e5;
-  border-radius: 5px;
-  height: 100%;
-  width: 0%;
-  transition: width 0.1s linear;
+
+
+
+
+@media (min-width: 768px) {
+
+  .footer-content {
+      margin-top: 0em;
+  }
 }
 
-/* qrcode  */
-.qr-container {
-  max-width: 200px;
-  margin-left: 30px;
+/* @media (min-width: 1000px) {
 
+  .footer-content {
+      margin-top: 3.3em;
+  }
 }
 
+@media (min-width: 1200px) {
 
-.carousel-item {
-  transition: transform 2s ease-in-out;
-}
-.carousel-fade .active.carousel-item-start,
-.carousel-fade .active.carousel-item-end {
-  transition: opacity 0s 2s;
-}
-
+  .footer-content {
+      margin-top: 0em;
+  }
+} */
