--- a/css/qr-code.css
+++ b/css/qr-code.css
@@ -6,18 +6,30 @@
 
 
 
+
 .qr-container p {
     font-size: 1rem;
     line-height: 18px;
     color: #ffffff;
+    margin-right: 10px;
 }
 
+@media (min-width: 1700px) {
+    .qr-container {
+        flex-direction: column;
 
+    }
+
+    .qr-container p {
+
+        margin-right: 0px;
+    }
+}
 
 /* mobile info link */
 .mobile-info-container {
     width: 100%;
-    height: 100px;
+
 }
 
 #mobile-info-link {
@@ -29,6 +41,7 @@
     font-size: .7rem;
 
 }
+
 @media (min-width: 600px) {
     #mobile-info-link {
         font-size: .9rem;
@@ -44,42 +57,31 @@
     }
 }
 
-/* @media (min-width: 992px) {
+@media (min-width: 997px) {
     .qr-container {
-
-        margin-top: 0px;
-    }
-
-
-}
-
-@media (min-width: 1200px) {
-    .qr-container {
-        margin-left: 0;
-        position: absolute;
-        bottom: 0px;
-        right: 20px;
+        right: 60px;
+        bottom: -10px
     }
 }
-
-@media (min-width: 1600px) {
-    .qr-container p {
-        font-size: 1.2rem;
-        line-height: 20px;
-
+@media (min-width: 1500px) {
+    .qr-container {
+        right: 70px
     }
 }
-
-
-@media (min-width: 2250px) {
+@media (min-width: 1700px) {
     .qr-container {
-        margin-left: 0;
-        position: absolute;
-        bottom: 0px;
-        right: 70px;
+        right: 30px
     }
-    .qr-container p {
-        font-size: 1.4rem;
-
+}
+@media (min-width: 1900px) {
+    .qr-container {
+        right: 50px;
+        bottom: 0;
     }
-} */
+}
+@media (min-width: 2000px) {
+    .qr-container {
+        right: 60px;
+        bottom: 20;
+    }
+}
