--- a/css/image-slider.css
+++ b/css/image-slider.css
@@ -76,40 +76,36 @@
 
 
 
-  .carousel-control-next:focus,
-  .carousel-control-next:hover,
-  .carousel-control-prev:focus,
-  .carousel-control-prev:hover {
-    opacity: 1;
+.carousel-control-next:focus,
+.carousel-control-next:hover,
+.carousel-control-prev:focus,
+.carousel-control-prev:hover {
+  opacity: 1;
 
-  }
+}
 
+.icon-container span {
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+  padding: 5px;
+  opacity: .5;
+  position: relative;
+  top: 70px;
+}
+
+@media (min-width: 768px) {
   .icon-container span {
-    cursor: pointer;
-    transition: all .3s ease-in-out;
     padding: 30px;
-
-    opacity: .5;
-
   }
-
-  .icon-container span:hover  {
-    opacity: 1;
-    background-color: rgba(255, 255, 255, 0.21);
+}
 
 
-  }
+.icon-container span:hover {
+  opacity: 1;
+  background-color: rgba(255, 255, 255, 0.21);
 
 
-
-
-
-
-
-
-
-
-
+}
 
 
 .carousel-item {
