--- a/css/image-slider.css
+++ b/css/image-slider.css
@@ -7,10 +7,20 @@
 
 
 
+.icon-container span {
+  border-radius: 50%;
+}
+
+.carousel-inner,
+.icon-container .carousel-control-prev,
+.carousel-control-next {
+  cursor: url('/files/pause-circle.svg') 10 3, auto !important;
+}
 
 
 .carousel-inner {
   height: 100%;
+
 
 }
 
@@ -48,21 +58,11 @@
 
 
 
-/* p {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    color: white;
-    text-align: center;
-    font-size: 24px;
-
-  } */
-
-/* carousel controls full screen */
-
 .carousel-control-prev,
 .carousel-control-next {
   background-color: transparent;
   transition: all .3s ease-in-out;
-  cursor: default !important;
+
   opacity: 1;
 }
 
@@ -70,7 +70,7 @@
   opacity: 1;
   background-color: transparent;
   transition: .2s ease-in-out all;
-  cursor: pointer;
+  cursor: default;
 
 }
 
@@ -81,14 +81,14 @@
 .carousel-control-prev:focus,
 .carousel-control-prev:hover {
   opacity: 1;
-
 }
 
-.icon-container span {
+.icon-container span,
+.icon-container span:focus {
   cursor: pointer;
   transition: all .3s ease-in-out;
   padding: 5px;
-  opacity: .5;
+  opacity: .2;
   position: relative;
   top: 70px;
 }
@@ -99,12 +99,24 @@
   }
 }
 
-
 .icon-container span:hover {
   opacity: 1;
-  background-color: rgba(255, 255, 255, 0.21);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: black !important;
+}
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon,
+.carousel-control-prev-icon:focus,
+.carousel-control-next-icon:focus {
+  border: white solid 2px;
+  transition: all .3s ease-in-out;
+}
 
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+  filter: invert(100);
+  border: black solid 2px;
 }
 
 
@@ -253,5 +265,34 @@
   .item-info h3,
   .item-info h4 {
     font-size: 2.1rem;
+  }
+}
+
+@media screen and (min-width:320px) and (orientation:portrait) {
+  #img-container {
+    margin-top: 5rem;
+  }
+}
+
+@media screen and (min-width:360px) and (orientation:portrait) {
+
+  #img-container {
+    margin-top: 2rem;
+  }
+}
+
+@media screen and (min-width:600px) and  (orientation:portrait) {
+  #img-container {
+    margin-top: 4rem;
+  }
+}
+@media screen and (min-width:768px) and  (orientation:portrait) {
+  #img-container {
+    margin-top: 2rem;
+  }
+}
+@media screen and (min-width:800px) and  (orientation:portrait) {
+  #img-container {
+    margin-top: 5rem;
   }
 }
