--- a/css/image-slider.css
+++ b/css/image-slider.css
@@ -11,10 +11,10 @@
   border-radius: 50%;
 }
 
-.carousel-inner,
+.carousel-item img,
 .icon-container .carousel-control-prev,
 .carousel-control-next {
-  cursor: url('/files/pause-circle.svg') 10 3, auto !important;
+  cursor: url('../files/pause-circle.svg') 10 3, auto !important;
 }
 
 
@@ -22,6 +22,17 @@
   height: 100%;
 
 
+}
+
+
+
+
+
+.disable {
+  opacity: .3;
+  pointer-events: none;
+  cursor: default;
+  text-decoration: none;
 }
 
 .item-info {
@@ -33,7 +44,8 @@
   flex-direction: column;
   align-items: center !important;
   justify-content: center !important;
-  margin-top: 1em;
+  max-width: 85%;
+  margin: 0 auto;
 
 }
 
@@ -62,7 +74,9 @@
 .carousel-control-next {
   background-color: transparent;
   transition: all .3s ease-in-out;
+  height: 50%;
 
+  top: 13rem;
   opacity: 1;
 }
 
@@ -89,8 +103,7 @@
   transition: all .3s ease-in-out;
   padding: 5px;
   opacity: .2;
-  position: relative;
-  top: 70px;
+
 }
 
 @media (min-width: 768px) {
@@ -197,10 +210,11 @@
     font-size: 1.7rem;
   }
 
-  .carousel-item img {
-    height: 60vh;
-
+  .img-container {
+    position: relative;
+    bottom: 2rem;
   }
+
 }
 
 @media (min-width: 1024px) {
@@ -254,6 +268,10 @@
   .carousel-item img {
     height: 70vh;
   }
+
+  .item-info {
+    margin-top: 2rem;
+  }
 }
 
 @media (min-width: 2000px) {
@@ -268,6 +286,8 @@
   .item-info h4 {
     font-size: 2.1rem;
   }
+
+
 }
 
 @media screen and (min-width:320px) and (orientation:portrait) {
@@ -283,18 +303,28 @@
   }
 }
 
-@media screen and (min-width:600px) and  (orientation:portrait) {
+@media screen and (min-width:600px) and (orientation:portrait) {
   #img-container {
     margin-top: 4rem;
   }
 }
-@media screen and (min-width:768px) and  (orientation:portrait) {
+
+@media screen and (min-width:768px) and (orientation:portrait) {
   #img-container {
     margin-top: 2rem;
   }
 }
-@media screen and (min-width:800px) and  (orientation:portrait) {
+
+@media screen and (min-width:800px) and (orientation:portrait) {
   #img-container {
     margin-top: 5rem;
   }
 }
+@media only screen and (max-device-width: 950px) and (max-device-height: 500px) and (orientation: landscape) {
+  .carousel-control-prev,
+.carousel-control-next {
+
+  top: 7rem;
+}
+}
+
